Scrollbars fixed in code editor Theme changed to the light one (XCode) Context variables table columns auto-resize to fit content now

--- a/modules/activiti-webapp-explorer2/src/main/webapp/editor-app/configuration/properties/text-popup.css
+++ b/modules/activiti-webapp-explorer2/src/main/webapp/editor-app/configuration/properties/text-popup.css
@@ -29,7 +29,7 @@
 
 #variablesWrapper {
     border-left: 1px solid #a4acb9;;
-    width: 396px;
+    width: 446px;
     display: inline-block;
     vertical-align: top;
     background-color: RGB(232, 237, 241);
@@ -37,7 +37,7 @@
 }
 
 #scriptTemplate {
-    width: 800px;
+    width: 750px;
     display: inline-block;
     vertical-align: top;
     height: 710px;
@@ -47,8 +47,8 @@
     font-size: 12px;
     margin-top: 4px;
     display: inline-block;
-    width: 396px;
-    height: 440px;
+    width: 446px;
+    height: 180px;
     overflow-y: overlay;
     overflow-x: hidden;
 }
@@ -56,7 +56,7 @@
     font-size: 12px;
     margin-top: 4px;
     display: inline-block;
-    width: 386px;
+    width: 436px;
     height: 440px;
     overflow-y: overlay;
     overflow-x: hidden;
@@ -77,7 +77,7 @@
 #outTable {
     display: inline-table;
     width: 93%;
-    table-layout: fixed;
+    table-layout: auto;
     margin-left: 10px;
     line-height: 2.02;
 }
@@ -85,7 +85,7 @@
 #inTable {
     display: inline-table;
     width: 95%;
-    table-layout: fixed;
+    table-layout: auto;
     line-height: 2.02;
 }
 
